k8s files/document service/dbDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-db
  namespace: micro-app
  labels:
    owner: abdalrhman
    env: prod
    app: document-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-db-pod
  template:
    metadata:
      labels:
        owner: abdalrhman
        env: prod
        app: document-db-pod
    spec: 
      restartPolicy: Always 
      containers:
        - image: mysql:8.0.20
          name: document-db-service
          imagePullPolicy: IfNotPresent
          resources:  
            limits:
              cpu: "1000m"
              memory: "1024Mi"
            requests:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 3306
              name: expose-port
          volumeMounts:
            - name:  mysql-storage
              mountPath:  /var/lib/mysql/
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: document-pvc-app
