k8s files/document service/dbService.yml
apiVersion: v1
kind: Service
metadata:
  name:  db-service-app
  namespace: micro-app
spec:
  selector:
    app:  document-db-pod
  type:  NodePort
  ports:
  - name:  internal-access-port
    port:  3306
    targetPort:  3306
